# GeneticRacing

./: .gitignore  CMakeLists.txt  readme.md  todo.txt
src/: DeepNeuralNets.cpp  DeepNeuralNets.h  Defs.h  Matrix.cpp  Matrix.h  NeuralNet.cpp  NeuralNet.h  TrackMaker.cpp  TrackMaker.h  Utils.cpp  Utils.h  main.cpp
src/assets/models/: populationModel0.txt  populationModel1.txt  possiblyGood.txt
src/assets/tracks/: track1.tr  track2.tr  track3.tr  track4.tr  track5.tr  track6.tr  track7.tr  track8.tr
src/assets/tracks/training/anticlockwise/: 1.tr  5.tr  track11.tr  track2.tr  track4.tr
src/assets/tracks/training/clockwise/: 2.tr  5.tr  track6.tr
src/shaders/: carFrag.glsl  carPhysicsCS.glsl  carPointsCS.glsl  carVert.glsl  computerVisionCS.glsl  driverFrag.glsl  driverVert.glsl  fitnessCS.glsl  startFrag.glsl  trackFrag.glsl  trackVert.glsl
src/shaders/matrix/: addition.glsl  dot.glsl  multiplication.glsl  scalarMultiplication.glsl  subtraction.glsl  transpose.glsl
src/shaders/neuralNet/: RElU.glsl  ReLUderriv.glsl  evolutionCompute.glsl  feedforward.glsl  layer1CS.glsl  neuralNetCompute.glsl  randomPopulationCompute.glsl
